# autodle-data

./: Cargo.toml  README.md  bat
src/: data.json  main.rs  parser.rs  utils.rs
